syntax = "proto3";

package io.harness.pms.execution;

option java_multiple_files = true;

enum Status {
  // In Progress statuses : All the in progress statuses named with ing in the end
  RUNNING = 0;
  INTERVENTION_WAITING = 1;
  TIMED_WAITING = 2;
  ASYNC_WAITING = 3;
  TASK_WAITING = 4;
  DISCONTINUING = 5;

  // Final Statuses : All the final statuses named with ed in the end
  QUEUED = 6;
  SKIPPED = 7;
  PAUSED = 8;
  ABORTED = 9;
  ERRORED = 10;
  FAILED = 11;
  EXPIRED = 12;
  SUSPENDED = 13;  // This is when a step is closed prematurely not because of the actual flow
  SUCCEEDED = 14;
}